log
Mon 15 Aug 2022 12:52:25 AM UTC: 
 tests:  0|7
total_score: 0/70
2ac27de
Mon 15 Aug 2022 12:59:15 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
ac5495f
Mon 15 Aug 2022 01:13:19 AM UTC: 
 exercises.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:81:4: error: conversion to non-scalar type requested
   81 |    Vector* v = (Vector)malloc(sizeof(Vector));
      |    ^~~~~~
exercises.c:82:12: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
   82 |   v->datos=(int) malloc (sizeof(int)*n);
      |            ^
exercises.c:82:11: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   82 |   v->datos=(int) malloc (sizeof(int)*n);
      |           ^
test.c: In function ‘sumaV’:
test.c:244:5: error: ‘main’ is normally a non-static function [-Werror=main]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:266:1: error: expected declaration or statement at end of input
  266 | }
      | ^
At top level:
test.c:244:5: error: ‘main’ defined but not used [-Werror=unused-function]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
8214340
Mon 15 Aug 2022 01:14:28 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:81:4: error: conversion to non-scalar type requested
   81 |    Vector* v = (Vector)malloc(sizeof(Vector));
      |    ^~~~~~
exercises.c:82:12: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
   82 |   v->datos=(int) malloc (sizeof(int)*n);
      |            ^
exercises.c:82:11: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   82 |   v->datos=(int) malloc (sizeof(int)*n);
      |           ^
exercises.c:84:11: error: incompatible types when returning type ‘void *’ but ‘Vector’ was expected
   84 |    return NULL;
      |           ^~~~
test.c: In function ‘test_creaV’:
test.c:133:17: error: incompatible types when initializing type ‘Vector *’ using type ‘Vector’
  133 |     Vector *v = crearVector(size);
      |                 ^~~~~~~~~~~
test.c: In function ‘sumaV’:
test.c:244:5: error: ‘main’ is normally a non-static function [-Werror=main]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:266:1: error: expected declaration or statement at end of input
  266 | }
      | ^
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:85:1: error: control reaches end of non-void function [-Werror=return-type]
   85 | }
      | ^
At top level:
test.c:244:5: error: ‘main’ defined but not used [-Werror=unused-function]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
eec2cd4
Mon 15 Aug 2022 01:17:15 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:81:4: error: conversion to non-scalar type requested
   81 |    Vector* v = (Vector)malloc(sizeof(Vector));
      |    ^~~~~~
test.c: In function ‘sumaV’:
test.c:244:5: error: ‘main’ is normally a non-static function [-Werror=main]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:266:1: error: expected declaration or statement at end of input
  266 | }
      | ^
At top level:
test.c:244:5: error: ‘main’ defined but not used [-Werror=unused-function]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
9ee926d
Mon 15 Aug 2022 01:17:32 AM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:81:4: error: conversion to non-scalar type requested
   81 |    Vector* v = (Vector)malloc(sizeof(Vector));
      |    ^~~~~~
test.c: In function ‘sumaV’:
test.c:244:5: error: ‘main’ is normally a non-static function [-Werror=main]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:266:1: error: expected declaration or statement at end of input
  266 | }
      | ^
At top level:
test.c:244:5: error: ‘main’ defined but not used [-Werror=unused-function]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
a62b134
Mon 15 Aug 2022 01:17:55 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘sumaV’:
test.c:244:5: error: ‘main’ is normally a non-static function [-Werror=main]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:266:1: error: expected declaration or statement at end of input
  266 | }
      | ^
At top level:
test.c:244:5: error: ‘main’ defined but not used [-Werror=unused-function]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
24e0166
Mon 15 Aug 2022 01:18:52 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|0
total_score: 70/70
173e652
